force-app/main/default/objects/Self_Assessment_Question__c/Self_Assessment_Question__c.object-meta.xml
<CustomObject>
    <description>An individual question in a Self-Assessment Template</description>
    <label>Self-Assessment Question</label>
    <nameField>
        <displayFormat>SAQ-{000000}</displayFormat>
        <label>Self-Assessment Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Self-Assessment Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>