force-app/main/default/objects/Self_Assessment_Question__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <description>For rating scale questions, the input type when presented to users in a self-assessment form</description>
    <inlineHelpText>For rating scale questions, the input type when presented to users in a self-assessment form</inlineHelpText>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>