force-app/main/default/objects/Self_Assessment_Question__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Help text to present to the user when encountering this field in a self-assessment</description>
    <inlineHelpText>Help text to present to the user when encountering this field in a self-assessment</inlineHelpText>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>