force-app/main/default/objects/Self_Assessment_Question__c/fields/Minimum_Value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Value__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Minimum Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>