force-app/main/default/objects/Self_Assessment_Question__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <description>Available picklist values for this field. Enter values separated by semi-colons.</description>
    <inlineHelpText>Available picklist values for this field. Enter values separated by semi-colons.</inlineHelpText>
    <label>Picklist Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>