force-app/main/default/objects/Self_Assessment_Question__c/fields/Self_Assessment_Template__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Self-Assessment Template</label>
    <referenceTo>Self_Assessment_Template__c</referenceTo>
    <relationshipLabel>Self-Assessment Questions</relationshipLabel>
    <relationshipName>Self_Assessment_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>