force-app/main/default/objects/Self_Assessment_Question__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>The order in which this question should appear in the self-assessment. Lowest numbers appear first. Nulls last.</description>
    <inlineHelpText>The order in which this question should appear in the self-assessment. Lowest numbers appear first. Nulls last.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>