force-app/main/default/objects/Self_Assessment_Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The data type of the question. Select Rating Scale for a numerical score. Select Text Area for open responses.</description>
    <inlineHelpText>The data type of the question. Select Rating Scale for a numerical score. Select Text Area for open responses.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Question_Types</valueSetName>
    </valueSet>
</CustomField>