force-app/main/default/objects/Self_Assessment_Question__c/validationRules/PicklistFieldsMustHaveValues.validationRule-meta.xml
<ValidationRule>
    <fullName>PicklistFieldsMustHaveValues</fullName>
    <active>true</active>
    <description>Picklist and multi-select picklist questions must have at least one value defined in Picklist Values</description>
    <errorConditionFormula>AND(
 OR(
  ISPICKVAL( Type__c, &quot;Picklist&quot; ), 
  ISPICKVAL( Type__c, &quot;Multi-Select Picklist&quot; )
 ), 
 ISBLANK( Picklist_Values__c )
)</errorConditionFormula>
    <errorDisplayField>Picklist_Values__c</errorDisplayField>
    <errorMessage>Picklist and multi-select picklist questions must have at least one value defined in Picklist Values</errorMessage>
</ValidationRule>