force-app/main/default/objects/Self_Assessment_Question__c/validationRules/RatingScaleDetailsMustBeDefined.validationRule-meta.xml
<ValidationRule>
    <fullName>RatingScaleDetailsMustBeDefined</fullName>
    <active>true</active>
    <description>Rating Scale questions must have a Minimum Value, Maximum Value, and Display Type</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Type__c, &quot;Rating Scale&quot; ), 
 OR(
  ISBLANK( TEXT( Display_Type__c ) ), 
  ISBLANK( Minimum_Value__c ), 
  ISBLANK( Maximum_Value__c )
 )
)</errorConditionFormula>
    <errorMessage>Rating Scale questions must have a Minimum Value, Maximum Value, and Display Type</errorMessage>
</ValidationRule>